--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error Page</title>
+    <title>Tristan's Error Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: lightgoldenrodyellow;
+            font-family: 'Merriweather', serif;
         }
         .error-wrapper {
             display: flex;
@@ -15,6 +19,13 @@
             align-items: center;
             height: 100vh;
             flex-direction: column;
+        }
+        .error-wrapper > .error-heading {
+            margin-bottom: 42px;
+        }
+
+        img {
+            width: 50%;
         }
     </style>
 </head>
