--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       width: calc(100vw - 20px);
       border: 10px solid red;
       display: flex;
+      justify-content: center;
+      align-items: center;
     }
     
     .blocks {
