--- a/index.html
+++ b/index.html
@@ -1,63 +1,51 @@
 <!DOCTYPE html>
 <html lang='en'>
-<head>
-  <meta charset='UTF-8'>
-  <title></title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      margin: 0;
-      height: calc(100vh - 20px);
-      width: calc(100vw - 20px);
-      border: 10px solid red;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    .blocks {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 1000px;
-    }
-    .block {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      background-color:cadetblue;
-      height: 200px;
-      margin: 20px;
-    }
-    .block1 {
-        flex-basis: 400px;
-        /* flex-grow: 4; */
-        flex-shrink: 4;
-    }
-    .block2 {
-        flex-basis: 100px;
-        flex-grow: 1;
-        /* flex-shrink: 2; */
-    }
-    .block3 {
-        flex-basis: 200px;
-        /* flex-grow: 2; */
-        flex-shrink: 1;
 
-    }
-  </style>
+<head>
+    <meta charset='UTF-8'>
+    <title></title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            margin: 0;
+            height: calc(100vh - 20px);
+            width: calc(100vw - 20px);
+            border: 10px solid red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container > .img_blocks {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
+
+        .img_blocks img {
+            margin: 5px;
+            height: 120px;
+            width: auto;
+        }
+    </style>
 </head>
 
 <body>
-  <div class="container">
-    <div class="blocks">
-      <div class="block block1">1</div>
-      <div class="block block2">2</div>
-      <div class="block block3">3</div>
+    <div class="container">
+        <div class="img_blocks">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+            <img src="https://source.unsplash.com/random/300x150" alt="">
+        </div>
     </div>
-  </div>
 </body>
+
 </html>
